--- a/candelario/index.html
+++ b/candelario/index.html
@@ -42,6 +42,13 @@
             <li class="nav-item mx-0 mx-lg-1">
               <a
                 class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
+                href="#contact"
+                >CONTACTO</a
+              >
+            </li>
+            <li class="nav-item mx-0 mx-lg-1">
+              <a
+                class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
                 href="#portfolio"
                 >GALERÍA</a
               >
@@ -51,13 +58,6 @@
                 class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
                 href="#about"
                 >EL GATO</a
-              >
-            </li>
-            <li class="nav-item mx-0 mx-lg-1">
-              <a
-                class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-                href="#contact"
-                >CONTACTO</a
               >
             </li>
           </ul>
@@ -80,11 +80,79 @@
           <div class="divider-custom-line"></div>
         </div>
         <!-- Masthead Subheading-->
-        <p class="pre-wrap masthead-subheading font-weight-light mb-0">
-          Gato diabético de soporte emocional
+        <p class="masthead-subheading font-weight-light mb-0">
+          Gato de soporte emocional
         </p>
       </div>
     </header>
+    <section class="page-section" id="contact">
+      <div class="container">
+        <!-- Contact Section Heading-->
+        <div class="text-center">
+          <h2 class="page-section-heading text-secondary d-inline-block mb-0">
+            CONTACTO
+          </h2>
+        </div>
+        <!-- Icon Divider-->
+        <div class="divider-custom">
+          <div class="divider-custom-line"></div>
+          <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+          <div class="divider-custom-line"></div>
+        </div>
+        <!-- Contact Section Content-->
+        <div class="row justify-content-center">
+          <div class="col-lg-4">
+            <div class="d-flex flex-column align-items-center">
+              <div class="icon-contact mb-3">
+                <i class="fas fa-mobile-alt"></i>
+              </div>
+              <div class="text-muted">Celular</div>
+              <div class="text-center lead font-weight-bold">
+                Cristina Casas: 3112648861
+              </div>
+              <div class="text-center lead font-weight-bold">-</div>
+              <div class="text-center lead font-weight-bold">
+                Patricia Clavijo: 3002484110
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="d-flex flex-column align-items-center">
+              <div class="icon-contact mb-3">
+                <i class="far fa-envelope"></i>
+              </div>
+              <div class="text-muted">Email</div>
+              <a
+                class="text-center lead font-weight-bold"
+                href="mailto:daajimenezca@unal.edu.co"
+                >Daniel Casas: daajimenezca@unal.edu.co</a
+              >
+              <div class="text-center lead font-weight-bold">-</div>
+              <a
+                class="text-center lead font-weight-bold"
+                href="mailto:julian.clavijo.13@ucl.ac.uk"
+                >Julián Riveros: julian.clavijo.13@ucl.ac.uk</a
+              >
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="d-flex flex-column align-items-center">
+              <div class="icon-contact mb-3">
+                <i class="fa fa-map-marker" aria-hidden="true"></i>
+              </div>
+              <div class="text-muted">Dirección</div>
+              <div class="text-center lead font-weight-bold">
+                Diagonal 1 # 11 - 186 Int 1, Villeta, Cundinamarca.
+              </div>
+              <div class="text-center lead font-weight-bold">-</div>
+              <div class="text-center lead font-weight-bold">
+                Diagonal 54 # 20 - 05, Apto 401, Bogotá.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="page-section portfolio" id="portfolio">
       <div class="container">
         <!-- Portfolio Section Heading-->
@@ -614,53 +682,6 @@
         </div>
       </div>
     </section>
-    <section class="page-section" id="contact">
-      <div class="container">
-        <!-- Contact Section Heading-->
-        <div class="text-center">
-          <h2 class="page-section-heading text-secondary d-inline-block mb-0">
-            CONTACTO
-          </h2>
-        </div>
-        <!-- Icon Divider-->
-        <div class="divider-custom">
-          <div class="divider-custom-line"></div>
-          <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-          <div class="divider-custom-line"></div>
-        </div>
-        <!-- Contact Section Content-->
-        <div class="row justify-content-center">
-          <div class="col-lg-4">
-            <div class="d-flex flex-column align-items-center">
-              <div class="icon-contact mb-3">
-                <i class="fas fa-mobile-alt"></i>
-              </div>
-              <div class="text-muted">Celular</div>
-              <div class="lead font-weight-bold">3112648891</div>
-              <div class="lead font-weight-bold">3002484110</div>
-            </div>
-          </div>
-          <div class="col-lg-4">
-            <div class="d-flex flex-column align-items-center">
-              <div class="icon-contact mb-3">
-                <i class="far fa-envelope"></i>
-              </div>
-              <div class="text-muted">Email</div>
-              <a
-                class="lead font-weight-bold"
-                href="mailto:daajimenezca@unal.edu.co"
-                >daajimenezca@unal.edu.co</a
-              >
-              <a
-                class="lead font-weight-bold"
-                href="mailto:julian.clavijo.13@ucl.ac.uk"
-                >julian.clavijo.13@ucl.ac.uk</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
     <footer class="footer text-center">
       <div class="container">
         <div class="row">
@@ -690,8 +711,8 @@
           <div class="col-lg-4">
             <h4 class="mb-4">SOBRE CANDELARIO</h4>
             <p class="lead mb-0">
-              Candelario es un gato diabético que además brinda apoyo emocional
-              a pacientes psiquiátricos.
+              Candelario es un gato de necesidades médicas especiales que además
+              brinda apoyo emocional a pacientes psiquiátricos.
             </p>
           </div>
         </div>
