--- a/candelario/index.html
+++ b/candelario/index.html
@@ -81,7 +81,7 @@
         </div>
         <!-- Masthead Subheading-->
         <p class="masthead-subheading font-weight-light mb-0">
-          Gato de soporte emocional
+          Emotional Support Cat
         </p>
       </div>
     </header>
@@ -90,7 +90,7 @@
         <!-- Contact Section Heading-->
         <div class="text-center">
           <h2 class="page-section-heading text-secondary d-inline-block mb-0">
-            CONTACTO
+            CONTACT
           </h2>
         </div>
         <!-- Icon Divider-->
@@ -108,11 +108,11 @@
               </div>
               <div class="text-muted">Celular</div>
               <div class="text-center lead font-weight-bold">
-                Cristina Casas: 3112648861
+                Daniel Casas: +4407383039189
               </div>
               <div class="text-center lead font-weight-bold">-</div>
               <div class="text-center lead font-weight-bold">
-                Patricia Clavijo: 3002484110
+                Julian Riveros: +447927530364
               </div>
             </div>
           </div>
@@ -140,13 +140,10 @@
               <div class="icon-contact mb-3">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
               </div>
-              <div class="text-muted">Dirección</div>
-              <div class="text-center lead font-weight-bold">
-                Diagonal 1 # 11 - 186 Int 1, Villeta, Cundinamarca.
-              </div>
+              <div class="text-muted">Address</div>
               <div class="text-center lead font-weight-bold">-</div>
               <div class="text-center lead font-weight-bold">
-                Diagonal 54 # 20 - 05, Apto 401, Bogotá.
+                142 Bruce Road, E3 3EU, Bow Church, London.
               </div>
             </div>
           </div>
@@ -158,7 +155,7 @@
         <!-- Portfolio Section Heading-->
         <div class="text-center">
           <h2 class="page-section-heading text-secondary mb-0 d-inline-block">
-            GALERÍA
+            GALLERY
           </h2>
         </div>
         <!-- Icon Divider-->
@@ -653,7 +650,7 @@
         <!-- About Section Heading-->
         <div class="text-center">
           <h2 class="page-section-heading d-inline-block text-white">
-            EL GATO
+            THE CAT
           </h2>
         </div>
         <!-- Icon Divider-->
@@ -666,17 +663,13 @@
         <div class="row">
           <div class="col-lg-4 ml-auto">
             <p class="pre-wrap lead">
-              Freelancer is a free bootstrap theme created by Start Bootstrap.
-              The download includes the complete source files including HTML,
-              CSS, and JavaScript as well as optional SASS stylesheets for easy
-              customization.
+              Candelario was born in Colombia, South America.
+              He's one-year-old gray cat.
             </p>
           </div>
           <div class="col-lg-4 mr-auto">
             <p class="pre-wrap lead">
-              You can create your own custom avatar for the masthead, change the
-              icon in the dividers, and add your email address to the contact
-              form to make it fully functional!
+              He loves treats and naps.
             </p>
           </div>
         </div>
@@ -687,32 +680,25 @@
         <div class="row">
           <!-- Footer Location-->
           <div class="col-lg-4 mb-5 mb-lg-0">
-            <h4 class="mb-4">DIRECCIÓN</h4>
+            <h4 class="mb-4">ADDRESS</h4>
             <p class="lead mb-0">
-              Diagonal 1 # 11 - 186 Int 1, Villeta, Cundinamarca.
+               142 Bruce Road, E3 3EU, Bow Church, London.
             </p>
-            <br />
-            <p class="lead mb-0">Diagonal 54 # 20 - 05, Apto 401, Bogotá.</p>
           </div>
           <!-- Footer Social Icons-->
           <div class="col-lg-4 mb-5 mb-lg-0">
-            <h4 class="mb-4">REDES SOCIALES</h4>
+            <h4 class="mb-4">SOCIALS</h4>
             <a
               class="btn btn-outline-light btn-social mx-1"
               href="https://www.facebook.com/julian.chirrete"
               ><i class="fab fa-fw fa-facebook-f"></i></a
-            ><a
-              class="btn btn-outline-light btn-social mx-1"
-              href="https://www.twitter.com/daniel_casas1"
-              ><i class="fab fa-fw fa-twitter"></i
-            ></a>
           </div>
           <!-- Footer About Text-->
           <div class="col-lg-4">
-            <h4 class="mb-4">SOBRE CANDELARIO</h4>
+            <h4 class="mb-4">ABOUT CANDELARIO</h4>
             <p class="lead mb-0">
-              Candelario es un gato de necesidades médicas especiales que además
-              brinda apoyo emocional a pacientes psiquiátricos.
+              Candelario loves his food, being taken care of, and going out on walks.
+              If you find him, please let us know; we both would miss each other greatly.
             </p>
           </div>
         </div>
