--- a/candelario/index.html
+++ b/candelario/index.html
@@ -106,7 +106,7 @@
               <div class="icon-contact mb-3">
                 <i class="fas fa-mobile-alt"></i>
               </div>
-              <div class="text-muted">Celular</div>
+              <div class="text-muted">Mobile</div>
               <div class="text-center lead font-weight-bold">
                 Daniel Casas: +4407383039189
               </div>
