--- a/candelario/index.html
+++ b/candelario/index.html
@@ -663,13 +663,7 @@
         <div class="row">
           <div class="col-lg-4 ml-auto">
             <p class="pre-wrap lead">
-              Candelario was born in Colombia, South America.
-              He's one-year-old gray cat.
-            </p>
-          </div>
-          <div class="col-lg-4 mr-auto">
-            <p class="pre-wrap lead">
-              He loves treats and naps.
+              Candelario was born in Colombia, South America. He's one-year-old gray cat. He loves treats and naps.
             </p>
           </div>
         </div>
