--- a/candelario/index.html
+++ b/candelario/index.html
@@ -662,8 +662,10 @@
         <!-- About Section Content-->
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="pre-wrap lead">
-              Candelario was born in Colombia, South America. He's one-year-old gray cat. He loves treats and naps.
+            <p class="lead mb-0">
+              Candelario was born in Colombia, South America. 
+              He's one-year-old gray cat. 
+              He loves treats and naps.
             </p>
           </div>
         </div>
